# moro8asm

./: .gitmodules  CMakeLists.txt  README.md  moro8asm.c  moro8asm.h  moro8asm.h.cmake
cmake/Modules/: ConfigureChecks.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py
docs/cpu/opcodes/: jmp.rst
tests/: CMakeLists.txt  test_config.h  test_modules.c  test_moro8asm.c  test_tokenize.c
tests/test_modules/: max.s
tests/test_modules/expected/: alive.asm
tests/test_programs/: alive.asm
